# libce

./: CMakeLists.txt  README.md
include/ce/: config.h
include/ce/base/: assert.hh  tag_invoke.hh
include/ce/concepts/: awaiter_traits.hh  has_operator_co_await.hh  is_coroutine_handle.hh
include/ce/fwd/: continuations_fwd.hh  stop_token_fwd.hh  task_fwd.hh
include/ce/impls/: assert.hh  continuations.hh  cppfeature.hh  event_deleter.hh  event_loop.hh  frame_info.hh  handle.hh  stop_callback.hh  stop_callback_base.hh  stop_source.hh  stop_token.hh  stop_token_adapter.hh  tag_invoke.hh  task.hh  task_promise.hh  type_index.hh
include/ce/impls/awaiters/: sleep_awaiter.hh
include/ce/impls/cpos/: await_transform.hh  exchange_continuation_handle.hh  get_awaiter.hh  get_frame_info.hh  get_stop_token.hh  visit_continuation.hh
include/ce/impls/event/: event_deleter.hh  event_loop.hh
include/ce/impls/helpers/: sync_wait.hh
include/ce/impls/tasks/: sync_wait.hh  sync_wait_fwd.hh  sync_wait_promise.hh
src/ce/: event_loop.cc  stop_callback_base.cc  stop_source.cc  stop_token.cc
test/: task.cc
